<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpScreen">

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/division_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UpperSection" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/UpperSection"
        android:layout_width="431dp"
        android:layout_height="176dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="131dp"
        android:layout_height="47dp"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="616dp"
        android:fontFamily="@font/neucha"
        android:text="Help"
        android:textAlignment="center"
        android:textColor="@color/text_title"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/help_to_main"
        android:layout_width="53dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/attraction_busStops"
        android:layout_width="358dp"
        android:layout_height="148dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/mclarenregular"
        android:text="@string/help_info"
        android:textAlignment="inherit"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="388dp"
        android:layout_height="237dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

        android:fontFamily="@font/mclarenregular"
        android:text="@string/help_desc"
        android:textAlignment="inherit"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attraction_busStops" />

    <TextView
        android:id="@+id/help_contact"
        android:layout_width="189dp"
        android:layout_height="84dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="8dp"

        android:fontFamily="@font/mclarenregular"
        android:text="@string/help_contact"
        android:textAlignment="inherit"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>